--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -25,7 +25,7 @@
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input ml-5 mt-0">
-                                    <input type="text" name="name" class="form-check-input w-75" placeholder="Your Name">
+                                    <input type="text" name="name" class="p-2 mb-4 br-1 form-check-input w-75" placeholder="Your Name">
                                 </div>
                             </div>
                         </div>
@@ -33,7 +33,7 @@
                             <div class="d-flex flex-row">
                                 
                                 <div class="form-group form-input ml-5 mt-0">
-                                    <input type="email" name="email" class="form-check-input w-75" placeholder="Your Email address">
+                                    <input type="email" name="email" class="form-check-input br-1  w-75" placeholder="Your Email address">
                                 </div>
                             </div>
                         </div>
@@ -42,14 +42,14 @@
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
-                                    <input type="tel" name="phone_number" class="form-check-input w-75" placeholder="Your Phone number">
+                                    <input type="tel" name="phone_number" class="form-check-input br-1  w-75" placeholder="Your Phone number">
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
-                                    <input type="text" name="location" class="form-check-input w-75" placeholder="Your Street location">
+                                    <input type="text" name="location" class="form-check-input br-1  w-75" placeholder="Your Street location">
                                 </div>
                             </div>
                         </div>
