Input field adjusted

--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -21,7 +21,7 @@
                 {% csrf_token %}
                 <div class="pt-2">
                 <h2>Details</h2>
-                    <div class="row event-item">
+                    <div class="row event-item h-6">
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input ml-5 mt-0">
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row event-item mb-3">
+                    <div class="row event-item mb-3 h-6">
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
