--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row event-item mb-3 h-6">
+                    <div class="row mt-5 event-item mb-3 h-6 mt-5">
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
