--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -63,7 +63,7 @@
                         <div id='appetizers' class='collapse'>
                             {% for app in appetizers %}
                                 <div class="row event-item ml-4 mr-0">
-                                    <div class="col-8">
+                                    <div class="col-6">
                                         <div class="form-group form-check">
                                             <input type="checkbox" name="app_items[]" class="form-check-input" value="{{ app.pk }}">
                                             <label class="form-check-label">{{ app.starterContent }}</label>
@@ -71,11 +71,11 @@
                                         <p class="font-weight-bold pl-5">{{ app.starterPrice }}</p>
                                         
                                     </div>
-                                    <div class="col-2 text-center" id="menuSize">
+                                    <div class="col-2 text-center">
                                         <div class="form-group form-input">
                                             <input type="number" name="app-items-{{ app.pk }}" class="form-check-input" value="1" min="1" max="5">
                                         </div>                                            </div>
-                                    <div class="col-2 text-center" id="menuSize">
+                                    <div class="col-4 text-center" id="menuSize-lg">
                                         <img src="{% static "restaurant/images/starters/" %}{{ app.id }}.jpg" alt="" class="img-fluid">
                                     </div>
                                 <p class='ml-5'>{{ app.starterDesc }}</p>
