--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -74,7 +74,8 @@
                                     <div class="col-2 text-center">
                                         <div class="form-group form-input">
                                             <input type="number" name="app-items-{{ app.pk }}" class="form-check-input" value="1" min="1" max="5">
-                                        </div>                                            </div>
+                                        </div>                                            
+                                    </div>
                                     <div class="col-4 text-center" id="menuSize-lg">
                                         <img src="{% static "restaurant/images/starters/" %}{{ app.id }}.jpg" alt="" class="img-fluid">
                                     </div>
@@ -89,20 +90,23 @@
                     <h2 class='order-title'>Main Dish</h2>
                     <div id='mains'  class='collapse'>
                         {% for entre in entres %}
-                            <div class="row event-item mt-4">
-                                <div class="col-md-8 col-sm-12">
-                                    <div class="d-flex flex-row">
-                                        <div class="form-group form-check">
-                                            <input type="checkbox" name="main_items[]" class="form-check-input" value="{{ entre.pk }}">
-                                            <label class="form-check-label">{{ entre.mainContent }}</label>
-                                        </div>
-                                        <p class="font-weight-bold pl-5">{{ entre.mainPrice }}</p>
+                            <div class="row event-item ml-4 mr-0">
+                                <div class="col-6">
+                                    <div class="form-group form-check">
+                                        <input type="checkbox" name="main_items[]" class="form-check-input" value="{{ entre.pk }}">
+                                        <label class="form-check-label">{{ entre.mainContent }}</label>
+                                    </div>
+                                    <p class="font-weight-bold pl-5">{{ entre.mainPrice }}</p>
+                                    <div class="col-2 text-center">
                                         <div class="form-group form-input ml-5 mt-0">
                                                 <input type="number" name="entre-items-{{ entre.pk }}" class="form-check-input" value="1" min="1" max="5">
-                                            </div>
+                                        </div>
                                     </div>
-                                    <p>{{ entre.mainDesc }}</p>
+                                    <div class="col-4 text-center" id="menuSize-lg">
+                                        <img src="{% static "restaurant/images/mains/" %}{{ entre.id }}.jpg" alt="" class="img-fluid">
+                                    </div>
                                 </div>
+                                <p>{{ entre.mainDesc }}</p>
                             </div>
                             <hr />
                         {% endfor %}
