Bug fix on main dishes

--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -97,16 +97,16 @@
                                         <label class="form-check-label">{{ entre.mainContent }}</label>
                                     </div>
                                     <p class="font-weight-bold pl-5">{{ entre.mainPrice }}</p>
-                                    <div class="col-2 text-center">
-                                        <div class="form-group form-input ml-5 mt-0">
-                                                <input type="number" name="entre-items-{{ entre.pk }}" class="form-check-input" value="1" min="1" max="5">
-                                        </div>
-                                    </div>
-                                    <div class="col-4 text-center" id="menuSize-lg">
-                                        <img src="{% static "restaurant/images/mains/" %}{{ entre.id }}.jpg" alt="" class="img-fluid">
+                                </div>
+                                <div class="col-2 text-center">
+                                    <div class="form-group form-input">
+                                            <input type="number" name="entre-items-{{ entre.pk }}" class="form-check-input" value="1" min="1" max="5">
                                     </div>
                                 </div>
-                                <p>{{ entre.mainDesc }}</p>
+                                <div class="col-4 text-center" id="menuSize-lg">
+                                    <img src="{% static "restaurant/images/mains/" %}{{ entre.id }}.jpg" alt="" class="img-fluid">
+                                </div>
+                                <p class='ml-5'>{{ entre.mainDesc }}</p>
                             </div>
                             <hr />
                         {% endfor %}
