--- a/project_restaurant/users/templates/users/order_confirmation.html
+++ b/project_restaurant/users/templates/users/order_confirmation.html
@@ -27,7 +27,7 @@
                         {% for item in drink_items %}
                             <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
                         {% endfor %}
-                        <p class="font-weight-bold pt-4">Total: ${{ price }}</p>
+                        <p class="font-weight-bold pt-4">Total: {{ price }}€</p>
                     </div>
                 </div>
             </div>
