More Spanish parts lol

--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -59,16 +59,16 @@
 
         <nav class="nav-menu d-none d-lg-block">
             <ul>
-            <li><a href="{% url 'restaurant-home'%}">Home</a></li>
-            <li><a href="{% url 'restaurant-home'%}#about">About</a></li>
-            <li><a href="{% url 'restaurant-home'%}#menu">Menu</a></li>
-            <li><a href="{% url 'restaurant-home'%}#specials">Specials</a></li>
-            <li><a href="{% url 'restaurant-home'%}#events">Events</a></li>
-            <li><a href="{% url 'restaurant-home'%}#chefs">Chefs</a></li>
-            <li><a href="{% url 'restaurant-home'%}#gallery">Gallery</a></li>
-            <li><a href="{% url 'restaurant-home'%}#contact">Contact</a></li>
+            <li><a href="{% url 'restaurant-home'%}">Inicio</a></li>
+            <li><a href="{% url 'restaurant-home'%}#about">Acerca de</a></li>
+            <li><a href="{% url 'restaurant-home'%}#menu">Menú</a></li>
+            <li><a href="{% url 'restaurant-home'%}#specials">Especiales</a></li>
+            <li><a href="{% url 'restaurant-home'%}#events">Eventos</a></li>
+            <li><a href="{% url 'restaurant-home'%}#chefs">Cocineros</a></li>
+            <li><a href="{% url 'restaurant-home'%}#gallery">Galería</a></li>
+            <li><a href="{% url 'restaurant-home'%}#contact">Contacto</a></li>
 
-            <li class="book-a-table text-center"><a href="{% url 'order'%}"><i class="icofont-food-cart"></i> Delivery</a></li>
+            <li class="book-a-table text-center"><a href="{% url 'order'%}"><i class="icofont-food-cart"></i> Entrega</a></li>
             </ul>
         </nav>
         </div>
