--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -338,7 +338,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>B<span>Reservar </span> una mesa</h2>
+          <h2><span>Reservar </span> una mesa</h2>
          
         </div>
 
@@ -346,20 +346,20 @@
           {% csrf_token %}
           <div class="form-row">
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter your full name" required>
+              <input type="text" name="name" class="form-control" id="name" placeholder="Tu Nombrex" data-rule="minlen:4" data-msg="Please enter your full name" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" required>
+              <input type="email" class="form-control" name="email" id="email" placeholder="Tu correo electrónico" data-rule="email" data-msg="Please enter a valid email" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:4" data-msg="Please enter your phone number" required>
+              <input type="text" class="form-control" name="phone" id="phone" placeholder="Tu número de teléfono" data-rule="minlen:4" data-msg="Please enter your phone number" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
               
-             <input type="datetime-local" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter the date" required>
+             <input type="datetime-local" name="date" class="form-control" id="date" placeholder="Fecha" data-rule="minlen:4" data-msg="Please enter the date" required>
              
 
          
@@ -369,16 +369,16 @@
            
            
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="number" min="1" class="form-control" name="people" id="people" placeholder="# of people" data-rule="minlen:1" data-msg="Please enter the number of people" required>
+              <input type="number" min="1" class="form-control" name="people" id="people" placeholder="Número de personas" data-rule="minlen:1" data-msg="Please enter the number of people" required>
               <div class="validate"></div>
             </div>
           </div>
           <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
+            <textarea class="form-control" name="message" rows="5" placeholder="Mensaje"></textarea>
             <div class="validate"></div>
           </div>
         
-          <div class="text-center"><button type="submit"  id = "submit" data-toggle="modal" data-target="#myModal">Send Message</button></div>
+          <div class="text-center"><button type="submit"  id = "submit" data-toggle="modal" data-target="#myModal">Reservar una mesa</button></div>
           <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
             
@@ -389,7 +389,7 @@
                   <h2 class="modal-title">Reservation Sent Successfully!</h2>
                 </div>
                 <div class="modal-body">
-                  <p>We will confirm your reservation shortly via email or a phone call!</p>
+                  <p>Confirmaremos su reserva en breve por correo electrónico o una llamada telefónica!</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" onclick="javascript:window.location.reload()" data-dismiss="modal">Close</button>
