Order page made in spanish

--- a/project_restaurant/users/templates/users/order_confirmation.html
+++ b/project_restaurant/users/templates/users/order_confirmation.html
@@ -5,8 +5,8 @@
       <div class="container">
 
         <div class="section-title topper pt-2">
-          <h2>Order <span>Submitted!</span></h2>
-            <p class='clr'>You should receive a confirmation email soon.</p>
+          <h2><span>¡Orden enviada!</span></h2>
+            <p class='clr'>Debería recibir un correo electrónico de confirmación o llamar pronto.</p>
         </div>
 
         <div class="owl-carousel events-carousel" id='bg-new'>        
@@ -14,18 +14,18 @@
             <div class="pt-2">
                 <div class="row justify-content-center">
                     <div class="col-md-5 col-sm-12 text-center event-item">
-                        <h3 class="pb-3">Order Summary:</h3>
+                        <h3 class="pb-3">Resumen de la orden:</h3>
                         {% for item in app_items %}
-                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
+                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Cada</span></p>
                         {% endfor %}
                         {% for item in main_items %}
-                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
+                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Cada</span></p>
                         {% endfor %}
                         {% for item in dessert_items %}
-                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
+                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Cada</span></p>
                         {% endfor %}
                         {% for item in drink_items %}
-                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
+                            <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Cada</span></p>
                         {% endfor %}
                         <p class="font-weight-bold pt-4">Total: {{ price }}€</p>
                     </div>
