--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -6,7 +6,7 @@
         <div class="container">
 
         <div class="section-title topper">
-          <h2>Order <span>Food</span></h2>
+          <h2>Ordenar  <span>Comida</span></h2>
         </div>
         {% if messages %}
             {% for message in messages %}
@@ -21,12 +21,12 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="pt-2">
-                <h2>Details</h2>
+                <h2>Detalles</h2>
                     <div class="row event-item h-6">
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input ml-5 mt-0">
-                                    <input type="text" name="name" class="p-3 mb-4 br-1 form-check-input w-75" placeholder="Your Name">
+                                    <input type="text" name="name" class="p-3 mb-4 br-1 form-check-input w-75" placeholder="Tu Nombrex">
                                 </div>
                             </div>
                         </div>
@@ -34,7 +34,7 @@
                             <div class="d-flex flex-row">
                                 
                                 <div class="form-group form-input ml-5 mt-0">
-                                    <input type="email" name="email" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Your Email address">
+                                    <input type="email" name="email" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Tu correo electrónico">
                                 </div>
                             </div>
                         </div>
@@ -43,14 +43,14 @@
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
-                                    <input type="tel" name="phone_number" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Your Phone number">
+                                    <input type="tel" name="phone_number" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Tu número de teléfono">
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 mt-5">
                             <div class="d-flex flex-row">
                                 <div class="form-group form-input  ml-5 mt-0">
-                                    <input type="text" name="location" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Your Street location">
+                                    <input type="text" name="location" class="p-3 mb-4 form-check-input br-1  w-75" placeholder="Tu ubicación en la calle">
                                 </div>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="pt-2">
                     <button class="btn btn-main m-2" type="button" data-toggle="collapse" data-target="#appetizers" aria-expanded="false" aria-controls="appetizers"><i class="icofont-simple-down"></i></button>
-                    <h2 class='order-title'>Appetizers</h2>
+                    <h2 class='order-title'>Entrantes</h2>
                         <div id='appetizers' class='collapse'>
                             {% for app in appetizers %}
                                 <div class="row event-item ml-4 mr-0">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="pt-2">
                     <button class="btn btn-main m-2" type="button" data-toggle="collapse" data-target="#mains" aria-expanded="false" aria-controls="mains"><i class="icofont-simple-down"></i></button>
-                    <h2 class='order-title'>Main Dish</h2>
+                    <h2 class='order-title'>Platos principales</h2>
                     <div id='mains'  class='collapse'>
                         {% for entre in entres %}
                             <div class="row event-item ml-4 mr-0">
@@ -114,7 +114,7 @@
                 </div>
                 <div class="pt-2">
                     <button class="btn btn-main m-2" type="button" data-toggle="collapse" data-target="#desserts" aria-expanded="false" aria-controls="desserts"><i class="icofont-simple-down"></i></button>
-                    <h2 class='order-title'>Desserts</h2>
+                    <h2 class='order-title'>Postres</h2>
                     <div id='desserts'  class='collapse'> 
                         {% for dessert in desserts %}
                             <div class="row event-item ml-4 mr-0">
@@ -141,7 +141,7 @@
                 </div>
                 <div class="pt-2">
                 <button class="btn btn-main m-2" type="button" data-toggle="collapse" data-target="#drinks" aria-expanded="false" aria-controls="drinks"><i class="icofont-simple-down"></i></button>
-                    <h2 class='order-title'>Drinks</h2>
+                    <h2 class='order-title'>Bebidas</h2>
                     <div id='drinks'  class='collapse'> 
                         {% for drink in drinks %}
                             <div class="row event-item ml-4 mr-0">
