--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -12,7 +12,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'restaurant/images/favicon.png' %}" rel="icon">
+  <link href="{% static 'restaurant/images/mesob.jpeg' %}" rel="icon">
   <link href="{% static 'restaurant/images/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
