--- a/project_restaurant/users/templates/users/order_confirmation.html
+++ b/project_restaurant/users/templates/users/order_confirmation.html
@@ -28,7 +28,11 @@
                             <p>{{ item.amount }} <span class="pl-3">{{ item.name }} <span class="pl-3">{{ item.price }} Each</span></p>
                         {% endfor %}
                         <p class="font-weight-bold pt-4">Total: ${{ price }}</p>
+                        <h4 >Checkout</h4>
+                        <table border="0" cellpadding="10" cellspacing="0" align="center"><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/c2/webapps/mpp/paypal-popup?locale.x=en_C2" title="Check out with PayPal" onclick="javascript:window.open("https://www.paypal.com/c2/webapps/mpp/paypal-popup?locale.x=en_C2','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700"); return false;"><img src="https://www.paypalobjects.com/digitalassets/c/website/marketing/apac/C2/logos-buttons/34_Yellow_CheckOut_Pill_Button.png" alt="Check out with PayPal" /></a></td></tr></table>
                     </div>
+                    
+                        
                 </div>
             </div>
         
