--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -249,7 +249,7 @@
             <div class="tab-content">
             {% for special in specials %}
               {% if special.id == 2 %}
-              <div class="tab-pane active show" id="tab-{{special.id}}">
+              <div class="tab-pane active" id="tab-{{special.id}}">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>{{special.specialName}}</h3>
